--- a/compose.yaml
+++ b/compose.yaml
@@ -4,10 +4,12 @@ services:
       context: .
     tty: true
     volumes:
-      - ./src:/app
+      - .:/app
+      - node_modules:/app/node_modules
     environment:
       - WATCHPACK_POLLING=true
     command: sh -c "npm run dev"
     ports:
       - "3000:3000"
-
+volumes:
+  node_modules:
